eks/subnets.tf
data "aws_availability_zones" "available" {}

# PUBLIC
resource "aws_subnet" "public" {
  count = var.availability_zones_count

  vpc_id            = aws_vpc.this.id
  cidr_block        = cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, count.index)
  availability_zone = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name                                       = "${var.app}-public-sg"
    "kubernetes.io/cluster/${var.app}-cluster" = "shared"
    "kubernetes.io/role/elb"                   = 1
  }

  map_public_ip_on_launch = true
}

# PRIVATE
resource "aws_subnet" "private" {
  count = var.availability_zones_count

  vpc_id            = aws_vpc.this.id
  cidr_block        = cidrsubnet(var.vpc_cidr, var.subnet_cidr_bits, count.index + var.availability_zones_count)
  availability_zone = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name                                       = "${var.app}-private-sg"
    "kubernetes.io/cluster/${var.app}-cluster" = "shared"
    "kubernetes.io/role/internal-elb"          = 1
  }
}
